updates to page header

--- a/index.html
+++ b/index.html
@@ -1,31 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aprendendo a aprender</title>
-</head>
-<body>
-  <div class="page">
-    <header class="header">
+<html lang="ptbr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aprendendo a aprender</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="header">
+        <img
+          class="logo logo_place_header"
+          src="images/logo_place_header.png"
+          alt="Logo da Practicum."
+        />
+        <h1 class="header__title">Aprendendo a Aprender</h1>
+        <h2 class="header__subtitle">
+          As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
+          cotidiano.
+          <a class="header__link" href="#">Saiba mais</a>
+        </h2>
+        <img
+          class="header__main-illustration"
+          src="images/header-image.png"
+          alt="Imagem de um pensador refletindo no alto de uma montanha."
+        />
+        <div class="header__square"></div>
+      </header>
+      <main class="content">
+        <section class="description"></section>
 
-    </header>
-    <main class="content">
-      <section class="description">
-      </section>
+        <section class="digits"></section>
 
-      <section class="digits">
-      </section>
+        <section class="feynman"></section>
 
-      <section class="feynman">
-      </section>
-
-      <section class="kaufman">
-      </section>
-    </main>
-    <footer class="footer">
-
-    </footer>
-  </div>
-</body>
+        <section class="kaufman"></section>
+      </main>
+      <footer class="footer">
+        <div class="logo logo_place_footer">
+          <img src="images/logo_place_header.png" alt="Logo da Practicum." />
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
