builds second section (digits)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <section class="description">
           <div class="two-columns">
             <h3 class="two-columns__brief">
-              <a>O maior problema da educação</a>
+              <a class="two-columns__brief" href="$"
+                >O maior problema da educação</a
+              >
             </h3>
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
@@ -64,9 +66,56 @@
             </div>
           </div>
         </section>
-        <section class="digits"></section>
+        <section class="digits">
+          <h2 class="section-title">Fatos e números</h2>
+          <h3 class="section-subtitle">Sobre o cérebro e o aprendizado</h3>
+          <div class="table">
+            <div class="table__cell">
+              <h4 class="table__heading">86 bilhões</h4>
+              <p class="table__text">O número de neurônios no cérebro humano</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">73%</h4>
+              <p class="table__text">
+                A porcentagem de adultos nos EUA que se consideram aprendizes
+                para a vida toda -
+                <p class="table__text">Centro de Pesquisas Pew</p>
+              </p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">1,000 terabytes</h4>
+              <p class="table__text">A capacidade de armazenamento de informação de um humano</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">500 trilhões </h4>
+              <p class="table__text">O número de sinapses nervosas responsáveis
+              pelo aprendizado em um adulto humano médio</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">420 trilhões</h4>
+              <p class="table__text">O número de adultos abaixo de 25 anos sem educação
+              suficiente para encontrar empregos
+                <p class="table__text">Banco Mundial, 2017</p></p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">26 anos de idade </h4>
+              <p class="table__text">A idade com que Albert Einstein publicou o
+              seu artigo inovador sobre a relatividade especial</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">1885</h4>
+              <p class="table__text">Desenvolvimento da curva de esquecimento</p>
+            </div>
+            <div class="table__cell">
+              <h4 class="table__heading">1897</h4>
+              <p class="table__text">Publicação da pesquisa de Ivan Pavlov sobre condicionamento clássico</p>
+            </div>
+          </div>
+        </section>
 
-        <section class="feynman"></section>
+        <section class="feynman">
+          <h2></h2>
+        </section>
 
         <section class="kaufman"></section>
       </main>
