builds the third, fourth and fifth sections

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2 class="header__subtitle">
           As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
           cotidiano.
-          <a class="header__link" href="#">Saiba mais</a>
+        <p class="header__link"><a class="header__link" href="#">Saiba mais &rarr;</a></p>
         </h2>
         <img
           class="header__main-illustration"
@@ -112,16 +112,85 @@
             </div>
           </div>
         </section>
-
         <section class="feynman">
-          <h2></h2>
+          <h1 class="feynman__title">A Técnica de Feynman</h1>
+          <h2 class="feynman__subtitle">Aprender sem esquecer</h2>
+          <a class="feynman__link" href="#">Mais &rarr;</a>
         </section>
-
-        <section class="kaufman"></section>
+        <section class="kaufman">
+          <h1 class="section-title_theme_dark">Dez princípios para adquirir habilidades de forma rápida</h1>
+          <h2 class="section-subtitle_theme_dark">por Josh Kaufman</h2>
+          <div class="table_theme_dark">
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">1</li>
+              <li class="table__text_theme_dark">Escolha um projeto que te traga interesse</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">2</li>
+              <li class="table__text_theme_dark">Foque a sua energia em uma habilidade por vez </li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">3</li>
+              <li class="table__text_theme_dark">Defina o seu nível alvo de performance</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">4</li>
+              <li class="table__text_theme_dark">Desconstrua a habilidade em sub-habilidades</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">5</li>
+              <li class="table__text_theme_dark">Obtenha ferramentas críticas</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">6</li>
+              <li class="table__text_theme_dark">Elimite as barreiras para praticar</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">7</li>
+              <li class="table__text_theme_dark">Dedique tempo para a prática</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">8</li>
+              <li class="table__text_theme_dark">Crie ciclos de feedback rápidos</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">9</li>
+              <li class="table__text_theme_dark">Pratique usando o relógio, em intervalos curtos de tempo</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">10</li>
+              <li class="table__text_theme_dark">Dê ênfase a quantidade e velocidade</li>
+            </ul>
+            </div>
+            <img class="kaufman-triangle"
+            src="images/kaufman-triangle.svg" alt="Um
+            grande triângulo azul, sobre o qual Josh Kaufman reclama
+            propriedade"/>
+        </section>
       </main>
       <footer class="footer">
-        <div class="logo logo_place_footer">
-          <img src="images/logo_place_header.png" alt="Logo da Practicum." />
+        <div class="footer__columns">
+          <div class="footer__columns_content_copyright">
+          <img class="logo_place_footer" src="images/logo_place_footer.png" alt="Logo da Practicum." />
+          <h5 class="footer__author">&copy; 2023 Elionay</h5>
+        </div>
+        <div class="footer__columns_content_about">
+          <h4 class="footer__column-heading">Sobre Practicum by Yandex</h4>
+          <div class="footer__list">
+            <li class="footer__column-link">Página Inicial</li>
+            <li class="footer__column-link">Missão</li>
+            <li class="footer__column-link">Profissões</li>
+          </div>
+        </div>
+        <div class="footer__columns_content_social">
+          <h4 class="footer__column-heading">Mídia social</h4>
+          <div class="footer__list">
+            <li class="footer__column-link"><img class="footer__social-icons"
+              src="images/facebook_white.svg" alt="Ícone do Facebook">Facebook</li>
+            <li class="footer__column-link"><img class="footer__social-icons"
+              src="images/instagram_white.svg" alt="Ícone do Instagram">Instagram</li>
+          </div>
+        </div>
         </div>
       </footer>
     </div>
