atualiza o layout da página

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <h2 class="header__subtitle">
           As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
           cotidiano.
-        <p class="header__link"><a class="header__link" href="#">Saiba mais &rarr;</a></p>
+          <p class="header__link">
+            <a class="header__link" href="#">Saiba mais &rarr;</a>
+          </p>
         </h2>
         <img
           class="header__main-illustration"
@@ -46,6 +48,7 @@
                 garantia que ela será retida. No fim, nós só estamos aprendendo
                 mesmo a passar nas nossas provas.
               </p>
+              <p class="two-columns__paragraph" style="height: 30px"></p>
               <p class="two-columns__paragraph">
                 <span class="two-columns__span-accent"
                   >Aqui vai a pergunta de fato:
@@ -57,6 +60,7 @@
                 esta questão é sempre deixada de lado. Então, o que podemos
                 fazer para remediar isso?
               </p>
+              <p class="two-columns__paragraph" style="height: 30px"></p>
               <p class="two-columns__paragraph">
                 Bem, há várias técnicas e exercícios que podem ser aplicados ao
                 processo educacional para ajudar a torná-lo mais eficiente e
@@ -70,46 +74,61 @@
           <h2 class="section-title">Fatos e números</h2>
           <h3 class="section-subtitle">Sobre o cérebro e o aprendizado</h3>
           <div class="table">
-            <div class="table__cell">
-              <h4 class="table__heading">86 bilhões</h4>
-              <p class="table__text">O número de neurônios no cérebro humano</p>
-            </div>
-            <div class="table__cell">
-              <h4 class="table__heading">73%</h4>
-              <p class="table__text">
+            <ul class="table__cell">
+              <li class="table__heading">86 bilhões</li>
+              <li class="table__text">
+                O número de neurônios no cérebro humano
+              </li>
+            </ul>
+            <ul class="table__cell">
+              <li class="table__heading">73%</li>
+              <li class="table__text">
                 A porcentagem de adultos nos EUA que se consideram aprendizes
-                para a vida toda -
-                <p class="table__text">Centro de Pesquisas Pew</p>
-              </p>
-            </div>
-            <div class="table__cell">
-              <h4 class="table__heading">1,000 terabytes</h4>
-              <p class="table__text">A capacidade de armazenamento de informação de um humano</p>
-            </div>
-            <div class="table__cell">
-              <h4 class="table__heading">500 trilhões </h4>
-              <p class="table__text">O número de sinapses nervosas responsáveis
-              pelo aprendizado em um adulto humano médio</p>
-            </div>
-            <div class="table__cell">
-              <h4 class="table__heading">420 trilhões</h4>
-              <p class="table__text">O número de adultos abaixo de 25 anos sem educação
-              suficiente para encontrar empregos
-                <p class="table__text">Banco Mundial, 2017</p></p>
-            </div>
-            <div class="table__cell">
-              <h4 class="table__heading">26 anos de idade </h4>
-              <p class="table__text">A idade com que Albert Einstein publicou o
-              seu artigo inovador sobre a relatividade especial</p>
-            </div>
-            <div class="table__cell">
-              <h4 class="table__heading">1885</h4>
-              <p class="table__text">Desenvolvimento da curva de esquecimento</p>
-            </div>
-            <div class="table__cell">
-              <h4 class="table__heading">1897</h4>
-              <p class="table__text">Publicação da pesquisa de Ivan Pavlov sobre condicionamento clássico</p>
-            </div>
+                para a vida toda.
+              </li>
+              <li class="table__text">Centro de Pesquisas Pew</li>
+            </ul>
+            <ul class="table__cell">
+              <li class="table__heading">1,000 terabytes</li>
+              <li class="table__text">
+                A capacidade de armazenamento de informação de um humano
+              </li>
+            </ul>
+            <ul class="table__cell">
+              <li class="table__heading">500 trilhões</li>
+              <li class="table__text">
+                O número de sinapses nervosas responsáveis pelo aprendizado em
+                um adulto humano médio
+              </li>
+            </ul>
+            <ul class="table__cell" style="margin-top: 60px">
+              <li class="table__heading">420 trilhões</li>
+              <li class="table__text">
+                O número de adultos abaixo de 25 anos sem educação suficiente
+                para encontrar empregos.
+              </li>
+              <li class="table__text">Banco Mundial, 2017</li>
+            </ul>
+            <ul class="table__cell" style="margin-top: 60px">
+              <li class="table__heading">26 anos de idade</li>
+              <li class="table__text">
+                A idade com que Albert Einstein publicou o seu artigo inovador
+                sobre a relatividade especial
+              </li>
+            </ul>
+            <ul class="table__cell" style="margin-top: 60px">
+              <li class="table__heading">1885</li>
+              <li class="table__text">
+                Desenvolvimento da curva de esquecimento
+              </li>
+            </ul>
+            <ul class="table__cell" style="margin-top: 60px">
+              <li class="table__heading">1897</li>
+              <li class="table__text">
+                Publicação da pesquisa de Ivan Pavlov sobre condicionamento
+                clássico
+              </li>
+            </ul>
           </div>
         </section>
         <section class="feynman">
@@ -118,79 +137,119 @@
           <a class="feynman__link" href="#">Mais &rarr;</a>
         </section>
         <section class="kaufman">
-          <h1 class="section-title_theme_dark">Dez princípios para adquirir habilidades de forma rápida</h1>
+          <h1 class="section-title_theme_dark">
+            Dez princípios para adquirir habilidades de forma rápida
+          </h1>
           <h2 class="section-subtitle_theme_dark">por Josh Kaufman</h2>
           <div class="table_theme_dark">
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">1</li>
-              <li class="table__text_theme_dark">Escolha um projeto que te traga interesse</li>
+              <li class="table__text_theme_dark">
+                Escolha um projeto que te traga interesse
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">2</li>
-              <li class="table__text_theme_dark">Foque a sua energia em uma habilidade por vez </li>
+              <li class="table__text_theme_dark">
+                Foque a sua energia em uma habilidade por vez
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">3</li>
-              <li class="table__text_theme_dark">Defina o seu nível alvo de performance</li>
+              <li class="table__text_theme_dark">
+                Defina o seu nível alvo de performance
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">4</li>
-              <li class="table__text_theme_dark">Desconstrua a habilidade em sub-habilidades</li>
+              <li class="table__text_theme_dark">
+                Desconstrua a habilidade em sub-habilidades
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">5</li>
-              <li class="table__text_theme_dark">Obtenha ferramentas críticas</li>
+              <li class="table__text_theme_dark">
+                Obtenha ferramentas críticas
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">6</li>
-              <li class="table__text_theme_dark">Elimite as barreiras para praticar</li>
+              <li class="table__text_theme_dark">
+                Elimite as barreiras para praticar
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">7</li>
-              <li class="table__text_theme_dark">Dedique tempo para a prática</li>
+              <li class="table__text_theme_dark">
+                Dedique tempo para a prática
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">8</li>
-              <li class="table__text_theme_dark">Crie ciclos de feedback rápidos</li>
+              <li class="table__text_theme_dark">
+                Crie ciclos de feedback rápidos
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">9</li>
-              <li class="table__text_theme_dark">Pratique usando o relógio, em intervalos curtos de tempo</li>
+              <li class="table__text_theme_dark">
+                Pratique usando o relógio, em intervalos curtos de tempo
+              </li>
             </ul>
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">10</li>
-              <li class="table__text_theme_dark">Dê ênfase a quantidade e velocidade</li>
+              <li class="table__text_theme_dark">
+                Dê ênfase a quantidade e velocidade
+              </li>
             </ul>
-            </div>
-            <img class="kaufman-triangle"
-            src="images/kaufman-triangle.svg" alt="Um
+          </div>
+          <img
+            class="kaufman-triangle"
+            src="images/kaufman-triangle.svg"
+            alt="Um
             grande triângulo azul, sobre o qual Josh Kaufman reclama
-            propriedade"/>
+            propriedade"
+            style="z-index: 1"
+          />
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__columns_content_copyright">
-          <img class="logo_place_footer" src="images/logo_place_footer.png" alt="Logo da Practicum." />
-          <h5 class="footer__author">&copy; 2023 Elionay</h5>
-        </div>
-        <div class="footer__columns_content_about">
-          <h4 class="footer__column-heading">Sobre Practicum by Yandex</h4>
-          <div class="footer__list">
-            <li class="footer__column-link">Página Inicial</li>
-            <li class="footer__column-link">Missão</li>
-            <li class="footer__column-link">Profissões</li>
+            <img
+              class="logo_place_footer"
+              src="images/logo_place_footer.png"
+              alt="Logo da Practicum."
+            />
+            <h5 class="footer__author">&copy; 2023 Elionay</h5>
           </div>
-        </div>
-        <div class="footer__columns_content_social">
-          <h4 class="footer__column-heading">Mídia social</h4>
-          <div class="footer__list">
-            <li class="footer__column-link"><img class="footer__social-icons"
-              src="images/facebook_white.svg" alt="Ícone do Facebook">Facebook</li>
-            <li class="footer__column-link"><img class="footer__social-icons"
-              src="images/instagram_white.svg" alt="Ícone do Instagram">Instagram</li>
+          <div class="footer__columns_content_about">
+            <h4 class="footer__column-heading">Sobre Practicum by Yandex</h4>
+            <div class="footer__list">
+              <li class="footer__column-link">Página Inicial</li>
+              <li class="footer__column-link">Missão</li>
+              <li class="footer__column-link">Profissões</li>
+            </div>
           </div>
-        </div>
+          <div class="footer__columns_content_social">
+            <h4 class="footer__column-heading">Mídia social</h4>
+            <div class="footer__list">
+              <li class="footer__column-link">
+                <img
+                  class="footer__social-icons"
+                  src="images/facebook_white.svg"
+                  alt="Ícone do Facebook"
+                />Facebook
+              </li>
+              <li class="footer__column-link">
+                <img
+                  class="footer__social-icons"
+                  src="images/instagram_white.svg"
+                  alt="Ícone do Instagram"
+                />Instagram
+              </li>
+            </div>
+          </div>
         </div>
       </footer>
     </div>
