finishes building the website

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           src="images/logo_place_header.png"
           alt="Logo da Practicum."
         />
-        <h1 class="header__title">Aprendendo a Aprender</h1>
+        <h1 class="header__title">Aprendendo a <br />Aprender</h1>
         <h2 class="header__subtitle">
           As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
           cotidiano.
@@ -33,11 +33,9 @@
       <main class="content">
         <section class="description">
           <div class="two-columns">
-            <h3 class="two-columns__brief">
-              <a class="two-columns__brief" href="$"
-                >O maior problema da educação</a
-              >
-            </h3>
+            <a class="two-columns__brief" href="#"
+              >O maior problema da educação</a
+            >
             <div class="two-columns__main-text">
               <p class="two-columns__paragraph">
                 Seja na escola ou na universidade, o assunto que ninguém vai te
@@ -48,7 +46,6 @@
                 garantia que ela será retida. No fim, nós só estamos aprendendo
                 mesmo a passar nas nossas provas.
               </p>
-              <p class="two-columns__paragraph" style="height: 30px"></p>
               <p class="two-columns__paragraph">
                 <span class="two-columns__span-accent"
                   >Aqui vai a pergunta de fato:
@@ -60,7 +57,6 @@
                 esta questão é sempre deixada de lado. Então, o que podemos
                 fazer para remediar isso?
               </p>
-              <p class="two-columns__paragraph" style="height: 30px"></p>
               <p class="two-columns__paragraph">
                 Bem, há várias técnicas e exercícios que podem ser aplicados ao
                 processo educacional para ajudar a torná-lo mais eficiente e
@@ -132,15 +128,30 @@
           </div>
         </section>
         <section class="feynman">
-          <h1 class="feynman__title">A Técnica de Feynman</h1>
-          <h2 class="feynman__subtitle">Aprender sem esquecer</h2>
+          <img
+            class="feynman__image"
+            src="images/feynman.png"
+            alt="Uma foto
+      de Richard Feynman, um físico quântico mundialmente conhecido.
+      Sua técnica em relação à aprendizagem deriva dos seus métodos de estudo quando
+      ele era um estudante em Princeton."
+          />
+          <h2 class="feynman__title">A Técnica de Feynman</h2>
+          <h3 class="feynman__subtitle">Aprender sem esquecer</h3>
           <a class="feynman__link" href="#">Mais &rarr;</a>
         </section>
         <section class="kaufman">
-          <h1 class="section-title_theme_dark">
+          <img
+            class="kaufman-triangle"
+            src="images/kaufman-triangle.svg"
+            alt="Um
+          grande triângulo azul, sobre o qual Josh Kaufman reclama
+          propriedade"
+          />
+          <h2 class="section-title_theme_dark">
             Dez princípios para adquirir habilidades de forma rápida
-          </h1>
-          <h2 class="section-subtitle_theme_dark">por Josh Kaufman</h2>
+          </h2>
+          <h3 class="section-subtitle_theme_dark">por Josh Kaufman</h3>
           <div class="table_theme_dark">
             <ul class="table__cell_theme_dark">
               <li class="table__heading_theme_dark">1</li>
@@ -203,14 +214,6 @@
               </li>
             </ul>
           </div>
-          <img
-            class="kaufman-triangle"
-            src="images/kaufman-triangle.svg"
-            alt="Um
-            grande triângulo azul, sobre o qual Josh Kaufman reclama
-            propriedade"
-            style="z-index: 1"
-          />
         </section>
       </main>
       <footer class="footer">
@@ -221,7 +224,7 @@
               src="images/logo_place_footer.png"
               alt="Logo da Practicum."
             />
-            <h5 class="footer__author">&copy; 2023 Elionay</h5>
+            <h4 class="footer__author">&copy; 2023 Elionay</h4>
           </div>
           <div class="footer__columns_content_about">
             <h4 class="footer__column-heading">Sobre Practicum by Yandex</h4>
