--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ptbr">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,14 +15,12 @@
           src="images/logo_place_header.png"
           alt="Logo da Practicum."
         />
-        <h1 class="header__title">Aprendendo a <br />Aprender</h1>
-        <h2 class="header__subtitle">
+        <h1 class="header__title">Aprendendo a Aprender</h1>
+        <p class="header__subtitle">
           As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
-          cotidiano.
-          <p class="header__link">
-            <a class="header__link" href="#">Saiba mais &rarr;</a>
-          </p>
-        </h2>
+          cotidiano.<br />
+          <a class="header__link" href="#">Saiba mais &rarr;</a>
+        </p>
         <img
           class="header__main-illustration"
           src="images/header-image.png"
@@ -228,15 +226,15 @@
           </div>
           <div class="footer__columns_content_about">
             <h4 class="footer__column-heading">Sobre Practicum by Yandex</h4>
-            <div class="footer__list">
+            <ul class="footer__list">
               <li class="footer__column-link">Página Inicial</li>
               <li class="footer__column-link">Missão</li>
               <li class="footer__column-link">Profissões</li>
-            </div>
+            </ul>
           </div>
           <div class="footer__columns_content_social">
             <h4 class="footer__column-heading">Mídia social</h4>
-            <div class="footer__list">
+            <ul class="footer__list">
               <li class="footer__column-link">
                 <img
                   class="footer__social-icons"
@@ -251,7 +249,7 @@
                   alt="Ícone do Instagram"
                 />Instagram
               </li>
-            </div>
+            </ul>
           </div>
         </div>
       </footer>
