revisa o código pela segunda vez

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <h1 class="header__title">Aprendendo a Aprender</h1>
         <p class="header__subtitle">
           As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
-          cotidiano.<br />
-          <a class="header__link" href="#">Saiba mais &rarr;</a>
+          cotidiano.
+          <a class="header__link" href="#"><br />Saiba mais &rarr;</a>
         </p>
         <img
           class="header__main-illustration"
