finishes revision the code

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <p class="header__subtitle">
           As técnicas de aprendizado mais eficazes que você pode aplicar ao seu
           cotidiano.
-          <a class="header__link" href="#"><br />Saiba mais &rarr;</a>
         </p>
+        <a class="header__link" href="#">Saiba mais &rarr;</a>
         <img
           class="header__main-illustration"
           src="images/header-image.png"
